tests/baselines/reference/exportDefaultInterfaceClassAndValue.errors.txt
exportDefaultInterfaceClassAndValue.ts(2,1): error TS2323: Cannot redeclare exported variable 'default'.
exportDefaultInterfaceClassAndValue.ts(3,22): error TS2323: Cannot redeclare exported variable 'default'.
exportDefaultInterfaceClassAndValue.ts(4,26): error TS2323: Cannot redeclare exported variable 'default'.


==== exportDefaultInterfaceClassAndValue.ts (3 errors) ====
    const foo = 1
    export default foo
    ~~~~~~~~~~~~~~~~~~
!!! error TS2323: Cannot redeclare exported variable 'default'.
    export default class Foo {}
                         ~~~
!!! error TS2323: Cannot redeclare exported variable 'default'.
    export default interface Foo {}
                             ~~~
!!! error TS2323: Cannot redeclare exported variable 'default'.
    